Use django-basic-analytics-tracker package

--- a/compose/prod/django/Dockerfile
+++ b/compose/prod/django/Dockerfile
@@ -12,7 +12,7 @@ RUN apt-get update \
   # psycopg2 dependencies
   && apt-get install -y libpq-dev \
   # project dependencies
-  && apt-get install -y netcat \
+  && apt-get install -y netcat git \
   # cleaning up unused files
   && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
   && rm -rf /var/lib/apt/lists/*
