--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - .env
     depends_on:
       - postgres
+      - redis
 
   postgres:
     build:
@@ -26,5 +27,14 @@ services:
     env_file:
       - .env
 
+
+  redis:
+    image: redis:latest
+    ports:
+      - 6379:6379
+    volumes:
+      - redis_data:/data
+
 volumes:
   postgres_data:
+  redis_data:
